# Indoor-Air-Quality-System

./: README.md
backend_script/: aqi.py
indoor_air_quality_system_HW/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
indoor_air_quality_system_HW/src/: main.c
indoor_air_quality_system_HW/src/sensors/ccs811/: ccs811.c  ccs811.h
indoor_air_quality_system_HW/src/sensors/scd41/: sensirion_common.c  sensirion_common.h  sensirion_i2c_hal.c
indoor_air_quality_system_HW/src/sensors/sps30/: hal.c  sps30.c  sps30.h
udp_server/: nrf52840dk_nrf52840.overlay  prj.conf
udp_server/src/: main.c
